--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="about-details">
                         <div class="detail"><strong>Name:</strong> Vrushabh Rajaghatta</div>
                         <div class="detail"><strong>Email:</strong> <a href="mailto:vrishabhrajaghatta@gmail.com">vrishabhrajaghatta@gmail.com</a></div>
-                        <div class="detail"><strong>Location:</strong> Your Location</div>
+                        <div class="detail"><strong>Location:</strong> Bengaluru </div>
                         <div class="detail"><strong>Availability:</strong> Open to opportunities</div>
                     </div>
                 </div>
