--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <p><a href="https://github.com/Vrushi007" target="_blank">github.com/Vrushi007</a></p>
                     </div>
                 </div>
-                <div class="contact-form">
+                <!-- <div class="contact-form">
                     <form id="contactForm">
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -302,7 +302,7 @@
                         </div>
                         <button type="submit" class="btn primary">Send Message</button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
